--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_Login/Default.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_Login/Default.cshtml
@@ -167,7 +167,7 @@
                 <li class="l1" edit_params="width%3D78%26height%3D76%26title1Show%3D1%26title1Max%3D4%26showLink%3D1%26backgroundColor%3D1">
                     <span class="ico animated"><img title="" alt="" src="~/image/患者.png" /></span>
                     <p class="p">患者版</p>
-                    <a href="/patient.html" class="link">登录</a>
+                    <a href="/AT_PMain/PanMain" class="link">登录</a>
                 </li>
                 <li class="l2" edit_params="width%3D78%26height%3D76%26title1Show%3D1%26title1Max%3D4%26showLink%3D1%26backgroundColor%3D1">
                     <span class="ico animated"><img title="" alt="" src="~/image/hosicon.png"></span>
