--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Content/MainPage/global.css
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Content/MainPage/global.css
@@ -329,235 +329,269 @@ a:hover {
         z-index: 10;
     }
 
-        .header .top a {
-            padding: 0 14px;
-            float: right;
-            color: #fff;
-            font-size: 12px;
-        }
-
-        .header .top .en {
-            text-transform: uppercase;
-            font-family: 'futuramedium';
-            margin-right: 8px;
-        }
-
-        .header .top a.on {
-            background: #01763a;
-        }
-
-
-    .header .nav {
-        height: 110px;
-    }
-
-        .header .nav .wrap {
-            padding-top: 14px;
-        }
-
-        .header .nav .logo {
-            float: left;
-            width: 102px;
-            height: 86px;
-            padding: 0 55px 0 10px;
-        }
-
-            .header .nav .logo img, .header .nav .logo > a {
-                display: block;
-                height: 500px;
-                width:300px;
-            }
-
-    .header .navList {
+    .header .cityname {
+        margin-left: 300px;
+        height: 30px;
+        line-height: 38px;
+        font-size: 14px;
+        margin-right: 5px;
+        font-weight: bold;
+        color: white;
+        text-align: left;
         float: left;
     }
 
-        .header .navList li {
-            float: left;
-            position: relative;
-            min-width: 94px;
-        }
+.citynav {
+    width: 60px;
+    height: 30px;
+    background-color: #38ABBB;
+    line-height: 38px;
+    color: white;
+    cursor: pointer;
+    float: left;
+}
 
-    .header.guke .navList li {
-        min-width: auto;
-    }
-
-        .header.guke .navList li .one {
-            padding: 0 11px !important;
-        }
-
-        .header.guke .navList li.on .one {
-            color: #333333;
-            font-size: 22px;
-        }
-
-    .header.guke .nav .logo {
-        padding-right: 0px;
-    }
-
-    .header.guke .return {
-        float: right;
-        height: 96px;
-        line-height: 96px;
-    }
-
-        .header.guke .return a {
-            font-size: 12px;
-            color: #333333;
-            display: inline-block;
-            width: 94px;
-            height: 28px;
-            line-height: 28px;
-            border: 1px solid #dedede;
-            border-radius: 6px;
-            text-align: center;
-        }
-
-    .header .navList li .one {
-        position: relative;
-        display: block;
-        padding: 0 15px;
-        line-height: 96px;
-        font-size: 16px;
-        -webkit-transition: all 0.3s;
-        transition: all 0.3s;
-    }
-
-        .header .navList li .one .open {
-            display: none;
-        }
-
-    .header .shareNav {
-        float: right;
-        padding-top: 33px;
-        position: relative;
-    }
-
-        .header .shareNav > a {
-            display: block;
-            float: left;
-            margin-left: 10px;
-            font-size: 12px;
-        }
-
-        .header .shareNav .a1 {
-            border: 1px solid #dedede;
-            line-height: 30px;
-            width: 68px;
-            text-align: center;
-            border-radius: 10px;
-            behavior: url(css/PIE.htc);
-        }
-
-    .header .shareBtn {
-        margin-right: 13px;
-    }
-
-    .header .shareNav .a1:hover {
-        border-color: #01763a;
-        color: #fff;
-        background: #01763a;
-    }
-
-    .header .seachBtn {
-        background: url(../../image/head_sea.png) no-repeat center;
-        height: 32px;
-        width: 32px;
-    }
-
-    .header .shareBtn {
-        background: url(../image/head_share.png) no-repeat center;
-        height: 32px;
-        width: 32px;
-    }
-
-    .header .seachBtn:hover, .header .seachBtn.on {
-        background-image: url(../image/head_sea1.png);
-    }
-
-    .header .shareBtn:hover, .header .shareBtn.on {
-        background-image: url(../image/head_share1.png);
-    }
-
-    .header .share_w {
-        position: absolute;
+    .citynav ul {
         width: 60px;
-        height: 215px;
-        background: #fff;
-        right: 0;
-        top: 96px;
-        -webkit-box-shadow: 0px -2px 10px rgba(0,0,0,0.1);
-        box-shadow: 0px -2px 10px rgba(0,0,0,0.1);
+        background-color: #38ABBB;
+        padding: 0px 5px 5px 5px;
+        -moz-border-radius: 0px 0px 8px 8px;
+        -webkit-border-radius: 0px 0px 8px 8px;
+        -khtml-border-radius: 0px 0px 8px 8px;
+        border-radius: 0px 0px 8px 8px;
+        margin: 0px 0px 0px -8px;
+    }
+
+.header .top a {
+    padding: 0 14px;
+    float: right;
+    color: #fff;
+    font-size: 12px;
+}
+
+.header .top .en {
+    text-transform: uppercase;
+    font-family: 'futuramedium';
+    margin-right: 8px;
+}
+
+.header .top a.on {
+    background: #01763a;
+}
+
+
+.header .nav {
+    height: 110px;
+}
+
+    .header .nav .wrap {
+        padding-top: 14px;
+    }
+
+    .header .nav .logo {
+        float: left;
+        width: 200px;
+        height: 200px;
+        padding: 0 55px 0 10px;
+    }
+
+        .header .nav .logo img, .header .nav .logo > a {
+            display: block;
+            height: 200px;
+            width: 200px;
+        }
+
+.header .navList {
+    float: left;
+    margin-left: -50px;
+}
+
+    .header .navList li {
+        float: left;
+        position: relative;
+        min-width: 94px;
+    }
+
+.header.guke .navList li {
+    min-width: auto;
+}
+
+    .header.guke .navList li .one {
+        padding: 0 11px !important;
+    }
+
+    .header.guke .navList li.on .one {
+        color: #333333;
+        font-size: 22px;
+    }
+
+.header.guke .nav .logo {
+    padding-right: 0px;
+}
+
+.header.guke .return {
+    float: right;
+    height: 96px;
+    line-height: 96px;
+}
+
+    .header.guke .return a {
+        font-size: 12px;
+        color: #333333;
+        display: inline-block;
+        width: 94px;
+        height: 28px;
+        line-height: 28px;
+        border: 1px solid #dedede;
+        border-radius: 6px;
+        text-align: center;
+    }
+
+.header .navList li .one {
+    position: relative;
+    display: block;
+    padding: 0 15px;
+    line-height: 96px;
+    font-size: 16px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+    .header .navList li .one .open {
         display: none;
+    }
+
+.header .shareNav {
+    float: right;
+    padding-top: 33px;
+    position: relative;
+}
+
+    .header .shareNav > a {
+        display: block;
+        float: left;
+        margin-left: 10px;
+        font-size: 12px;
+    }
+
+    .header .shareNav .a1 {
+        border: 1px solid #dedede;
+        line-height: 30px;
+        width: 68px;
+        text-align: center;
+        border-radius: 10px;
         behavior: url(css/PIE.htc);
     }
 
-        .header .share_w:before {
-            content: "";
-            width: 100%;
-            height: 8px;
-            position: absolute;
-            top: -8px;
-            left: 0%;
-            background: url(../image/arr.png) no-repeat center;
+.header .shareBtn {
+    margin-right: 13px;
+}
+
+.header .shareNav .a1:hover {
+    border-color: #01763a;
+    color: #fff;
+    background: #01763a;
+}
+
+.header .seachBtn {
+    background: url(../../image/head_sea.png) no-repeat center;
+    height: 32px;
+    width: 32px;
+}
+
+.header .shareBtn {
+    background: url(../image/head_share.png) no-repeat center;
+    height: 32px;
+    width: 32px;
+}
+
+.header .seachBtn:hover, .header .seachBtn.on {
+    background-image: url(../image/head_sea1.png);
+}
+
+.header .shareBtn:hover, .header .shareBtn.on {
+    background-image: url(../image/head_share1.png);
+}
+
+.header .share_w {
+    position: absolute;
+    width: 60px;
+    height: 215px;
+    background: #fff;
+    right: 0;
+    top: 96px;
+    -webkit-box-shadow: 0px -2px 10px rgba(0,0,0,0.1);
+    box-shadow: 0px -2px 10px rgba(0,0,0,0.1);
+    display: none;
+    behavior: url(css/PIE.htc);
+}
+
+    .header .share_w:before {
+        content: "";
+        width: 100%;
+        height: 8px;
+        position: absolute;
+        top: -8px;
+        left: 0%;
+        background: url(../image/arr.png) no-repeat center;
+    }
+
+    .header .share_w .bdsharebuttonbox a {
+        display: block !important;
+        float: none !important;
+        margin: 0 auto !important;
+        padding: 0 !important;
+        width: 24px !important;
+        height: 24px !important;
+    }
+
+    .header .share_w .bdsharebuttonbox {
+        padding-top: 18px;
+    }
+
+        .header .share_w .bdsharebuttonbox a + a {
+            margin: 15px auto 0 !important;
         }
 
-        .header .share_w .bdsharebuttonbox a {
-            display: block !important;
-            float: none !important;
-            margin: 0 auto !important;
-            padding: 0 !important;
-            width: 24px !important;
-            height: 24px !important;
+        .header .share_w .bdsharebuttonbox .popup_sqq {
+            background: url(../image/qq.png) no-repeat center !important;
         }
 
-        .header .share_w .bdsharebuttonbox {
-            padding-top: 18px;
+        .header .share_w .bdsharebuttonbox .bds_tsina {
+            background: url(../image/wb.png) no-repeat center !important;
         }
 
-            .header .share_w .bdsharebuttonbox a + a {
-                margin: 15px auto 0 !important;
-            }
+        .header .share_w .bdsharebuttonbox .popup_qzone {
+            background: url(../image/kj.png) no-repeat center !important;
+        }
 
-            .header .share_w .bdsharebuttonbox .popup_sqq {
-                background: url(../image/qq.png) no-repeat center !important;
-            }
+        .header .share_w .bdsharebuttonbox .popup_tqf {
+            background: url(../image/xl.png) no-repeat center !important;
+        }
 
-            .header .share_w .bdsharebuttonbox .bds_tsina {
-                background: url(../image/wb.png) no-repeat center !important;
-            }
+        .header .share_w .bdsharebuttonbox .popup_wx {
+            background: url(../image/wx-1.png) no-repeat center !important;
+        }
 
-            .header .share_w .bdsharebuttonbox .popup_qzone {
-                background: url(../image/kj.png) no-repeat center !important;
-            }
+        .header .share_w .bdsharebuttonbox .popup_sqq:hover {
+            background: url(../image/qq_a.png) no-repeat center !important;
+        }
 
-            .header .share_w .bdsharebuttonbox .popup_tqf {
-                background: url(../image/xl.png) no-repeat center !important;
-            }
+        .header .share_w .bdsharebuttonbox .bds_tsina:hover {
+            background: url(../image/wb_a.png) no-repeat center !important;
+        }
 
-            .header .share_w .bdsharebuttonbox .popup_wx {
-                background: url(../image/wx-1.png) no-repeat center !important;
-            }
+        .header .share_w .bdsharebuttonbox .popup_qzone:hover {
+            background: url(../image/kj_a.png) no-repeat center !important;
+        }
 
-            .header .share_w .bdsharebuttonbox .popup_sqq:hover {
-                background: url(../image/qq_a.png) no-repeat center !important;
-            }
+        .header .share_w .bdsharebuttonbox .popup_tqf:hover {
+            background: url(../image/xl_a.png) no-repeat center !important;
+        }
 
-            .header .share_w .bdsharebuttonbox .bds_tsina:hover {
-                background: url(../image/wb_a.png) no-repeat center !important;
-            }
-
-            .header .share_w .bdsharebuttonbox .popup_qzone:hover {
-                background: url(../image/kj_a.png) no-repeat center !important;
-            }
-
-            .header .share_w .bdsharebuttonbox .popup_tqf:hover {
-                background: url(../image/xl_a.png) no-repeat center !important;
-            }
-
-            .header .share_w .bdsharebuttonbox .popup_wx:hover {
-                background: url(../image/wx.png) no-repeat center !important;
-            }
+        .header .share_w .bdsharebuttonbox .popup_wx:hover {
+            background: url(../image/wx.png) no-repeat center !important;
+        }
 
 .share_details {
     padding-top: 10px;
