--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_Login/Default.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_Login/Default.cshtml
@@ -8,14 +8,14 @@
 <head>
     <title>十安医生</title>
     <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon" />
-    <link rel="stylesheet" type="text/css" href="~/Content/Public/global.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/Public/slick.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/Public/page.css">
+    <link href="~/Content/MainPage/global.css" rel="stylesheet" />
+    <link href="~/Content/MainPage/slick.css" rel="stylesheet" />
+    <link href="~/Content/MainPage/page.css" rel="stylesheet" />
     <script src="~/Scripts/common/jquery.js"></script>
     <script src="~/Scripts/common/global.js"></script>
     <script src="~/Scripts/common/mousewheel.js"></script>
-    <link rel="stylesheet" type="text/css" href="~/Content/Public/mCustomScrollbar.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/Public/animate.css">
+    <link href="~/Content/MainPage/mCustomScrollbar.css" rel="stylesheet" />
+    <link href="~/Content/MainPage/animate.css" rel="stylesheet" />
     <script type="text/javascript" src="~/Scripts/common/mCustomScrollbar.js"></script>
     <script  type="text/javascript"  src="~/Scripts/common/slick.js"></script>
 
