--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/DisKnDa.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/DisKnDa.cshtml
@@ -6,6 +6,13 @@
     <link href="~/Content/SeaDoc/base.css" rel="stylesheet" />
     <link href="~/Content/SeaDoc/DisKnow.css" rel="stylesheet" />
     <div class="ui-grid ui-main clearfix">
+        <div class="position">
+            <div class="block">
+                您现在的位置：
+                <a href="/AT_PMain/PanMain">首页</a>
+                &gt; <a href="/AT_PMain/DisKnDa">疾病知识库</a>
+            </div>
+        </div>
         <div class="main-wrap">
             <!--常见疾病-->
 
