--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/SeaDoc.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/SeaDoc.cshtml
@@ -9,6 +9,13 @@
 <script type="text/javascript" src="~/Scripts/SeaDoc/common.js"></script>
 <script type="text/javascript" src="~/Scripts/SeaDoc/clinic.js"></script>
 <div class="ui-grid ui-main clearfix">
+    <div class="position">
+        <div class="block">
+            您现在的位置：
+            <a href="/AT_PMain/PanMain">首页</a>
+            &gt; <a href="/AT_PMain/SeaDoc">找医生(按科室)</a>
+        </div>
+    </div>
     <!--一级科室 regonof -->
 
     <ul class="tab-type-one first-clinic j-tab-wrap">
