--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/SelDiaOfSym.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/SelDiaOfSym.cshtml
@@ -117,7 +117,13 @@
                 color: #fff;
             }
     </style>
-    <div class="map"><a href="/Home/index.html" target="_self">首页</a> > <a href="javascript:void(0);" target="_self">症状自查</a></div>
+    <div class="position">
+        <div class="block">
+            您现在的位置：
+            <a href="/AT_PMain/PanMain">首页</a>
+            &gt; <a href="/AT_PMain/SelDiaOfSym">症状自诊</a>		
+        </div>
+    </div>
     <div class="sym_main1">
         <section>
             <div class="area">
