--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Content/LayoutPage/global.css
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Content/LayoutPage/global.css
@@ -185,7 +185,7 @@ a:hover {
 .wrap {
     width: 1230px;
     margin: 0 auto;
-    position: relative;
+    /* position: relative; */
     z-index: 1;
 }
 
@@ -325,7 +325,7 @@ a:hover {
         line-height: 38px;
         overflow: hidden;
         text-align: right;
-        position: relative;
+        /* position: relative; */
         z-index: 10;
     }
 
@@ -342,7 +342,7 @@ a:hover {
     }
 
 .citynav {
-    width: 60px;
+    width: 80px;
     height: 30px;
     background-color: #38ABBB;
     line-height: 38px;
@@ -353,13 +353,13 @@ a:hover {
 
     .citynav ul {
         width: 60px;
+        text-align: center;
+        position: absolute;
         background-color: #38ABBB;
         padding: 0px 5px 5px 5px;
-        -moz-border-radius: 0px 0px 8px 8px;
         -webkit-border-radius: 0px 0px 8px 8px;
-        -khtml-border-radius: 0px 0px 8px 8px;
         border-radius: 0px 0px 8px 8px;
-        margin: 0px 0px 0px -8px;
+        margin: 0px 0px 0px 15px;
     }
 
 .header .top a {
@@ -390,20 +390,20 @@ a:hover {
 
     .header .nav .logo {
         float: left;
-        width: 200px;
-        height: 200px;
+        width: 100px;
+        height: 100px;
         padding: 0 55px 0 10px;
     }
 
         .header .nav .logo img, .header .nav .logo > a {
             display: block;
-            height: 180px;
-            width: 180px;
+            height: 100px;
+            width: 100px;
         }
 
 .header .navList {
     float: left;
-    margin-left: -50px;
+    margin-left: 20px;
 }
 
     .header .navList li {
@@ -464,7 +464,7 @@ a:hover {
 .header .shareNav {
     float: right;
     padding-top: 33px;
-    position: relative;
+    /* position: relative; */
 }
 
     .header .shareNav > a {
@@ -690,29 +690,68 @@ a:hover {
     behavior: url(css/PIE.htc);
 }
 
-    .header .secondNav:before {
-        content: "";
-        width: 100%;
-        height: 8px;
-        position: absolute;
-        top: -8px;
-        left: 0%;
-        background: url(../image/arr.png) no-repeat center;
-    }
+.top .wrap .enNav {
+    position: absolute;
+    width: 110px;
+    left: 85.9%;
+    margin-left: -81px;
+    background: #fff;
+    top: 30px;
+    padding: 25px 0 10px;
+    -webkit-box-shadow: 0px -2px 10px rgba(0,0,0,0.1);
+    box-shadow: 0px -2px 10px rgba(0,0,0,0.1);
+    opacity: 1;
+    display: none;
+    -webkit-transition: all 0.1s;
+    transition: all 0.1s;
+    behavior: url(css/PIE.htc);
+    text-align: center;
+}
 
-    .header .secondNav a {
+    .top .wrap .enNav a {
         display: block;
         line-height: 1.2;
-        padding: 0 10px 15px;
+        padding: 0 26px 15px;
         text-align: center;
         font-size: 14px;
-        -webkit-transition: all 0.3s;
-        transition: all 0.3s;
+        color: black;
+        -webkit-transition: all 0.1s;
+        transition: all 0.1s;
     }
 
-        .header .secondNav a:hover, .header .secondNav a.on, .header .navList li .one:hover, .header .navList li.on .one {
-            color: #01763a;
-        }
+.top .wrap .secondNav:before {
+    content: "";
+    width: 100%;
+    height: 8px;
+    position: absolute;
+    top: -8px;
+    left: 0%;
+    background: url(../image/arr.png) no-repeat center;
+}
+
+.header .secondNav:before {
+    content: "";
+    width: 100%;
+    height: 8px;
+    position: absolute;
+    top: -8px;
+    left: 0%;
+    background: url(../image/arr.png) no-repeat center;
+}
+
+.header .secondNav a {
+    display: block;
+    line-height: 1.2;
+    padding: 0 10px 15px;
+    text-align: center;
+    font-size: 14px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+    .header .secondNav a:hover, .header .secondNav a.on, .header .navList li .one:hover, .header .navList li.on .one {
+        color: #01763a;
+    }
 
 .pc_displayNone {
     display: none;
@@ -1134,8 +1173,8 @@ a:hover {
             .header .nav .logo img, .header .nav .logo > a {
                 margin-top: 10px;
                 display: block;
-                height: 120px;
-                width: 120px;
+                height: 60px;
+                width: 60px;
             }
 
         .header .cityname {
