--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Content/MainPage/page.css
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Content/MainPage/page.css
@@ -528,7 +528,7 @@
 /*	2017.10.17 - xf	start*/
 
 .sguide {
-    background: url(../image/xf/jpg1.jpg);
+    background: url(../../image/jpg1.jpg);
 }
 
     .sguide .box {
@@ -757,24 +757,24 @@
 
         .guide .tools .l1 {
             width: 205px;
-            background-image: url(../image/xf/icon1.png);
+            background-image: url(../../image/icon1.png);
             text-indent: 86px;
         }
 
         .guide .tools .l2 {
-            background-image: url(../image/xf/icon2.png);
+            background-image: url(../../image/icon2.png);
         }
 
         .guide .tools .l3 {
-            background-image: url(../image/xf/icon3.png);
+            background-image: url(../../image/weixinicon.png);
         }
 
         .guide .tools .l4 {
-            background-image: url(../image/xf/icon4.png);
+            background-image: url(../../image/icon4.png);
         }
 
         .guide .tools .l5 {
-            background-image: url(../image/xf/WechatIMG17.png);
+            background-image: url(../../image/WechatIMG17.png);
         }
 
             .guide .tools .l5 .over {
@@ -816,7 +816,7 @@
             }
 
         .guide .tools .l2 .code {
-            background: url(../image/xf/png1-2.png) no-repeat center;
+            background: url(../../image/png1-2.png) no-repeat center;
             width: 120px;
             height: 138px;
             padding: 21px 30px 40px;
@@ -824,7 +824,7 @@
         }
 
         .guide .tools .l3 .code {
-            background: url(../image/xf/png1-1.png) no-repeat center;
+            background: url(../../image/png1-1.png) no-repeat center;
             width: 246px;
             height: 139px;
             padding: 21px 30px 40px;
@@ -832,7 +832,7 @@
         }
 
         .guide .tools .l4 .code {
-            background: url(../image/xf/png1-1.png) no-repeat center;
+            background: url(../../image/png1-1.png) no-repeat center;
             width: 246px;
             height: 139px;
             padding: 21px 30px 40px;
@@ -847,7 +847,7 @@
             padding: 22px 15px 15px;
             width: 135px;
             height: 135px;
-            background: url(../image/xf/png1.png) no-repeat;
+            background: url(../../image/png1.png) no-repeat;
             display: none;
         }
 
@@ -884,7 +884,7 @@
             width: 291px;
             height: 265px;
             margin-right: 183px;
-            background-image: url(../image/xf/png2.png);
+            background-image: url(../../image/png2.png);
         }
 
             .guide .links .l1 .p {
@@ -905,7 +905,7 @@
             width: 281px;
             height: 261px;
             margin-right: -62px;
-            background-image: url(../image/xf/png3.png);
+            background-image: url(../../image/png3.png);
         }
 
             .guide .links .l2 .p {
@@ -926,7 +926,7 @@
             width: 241px;
             height: 261px;
             margin-left: 21px;
-            background-image: url(../image/xf/png4.png);
+            background-image: url(../../image/png4.png);
             color: #333;
         }
 
@@ -950,7 +950,7 @@
             width: 251px;
             height: 263px;
             margin-left: 221px;
-            background-image: url(../image/xf/png5.png);
+            background-image: url(../../image/png5.png);
         }
 
             .guide .links .l4 .p {
@@ -1045,7 +1045,7 @@
             position: relative;
             padding: 8px 20px 8px 125px;
             overflow: hidden;
-            background: url(../image/xf/icon9.png) 50px no-repeat;
+            background: url(../../image/icon9.png) 50px no-repeat;
         }
 
             .len_banner .search-box .input:before {
@@ -1089,7 +1089,7 @@
 
 .len_page {
     min-height: 3543px;
-    background: url(../image/xf/jpg2.jpg) center top no-repeat;
+    background: url(../../image/jpg2.jpg) center top no-repeat;
 }
 
 .len_home1 {
@@ -1204,7 +1204,7 @@
     .len_home1 .list {
         padding-left: 14px;
         padding-top: 11px;
-        background: url(../image/xf/jpg3.jpg) 0 0 repeat-y;
+        background: url(../../image/jpg3.jpg) 0 0 repeat-y;
     }
 
         .len_home1 .list li {
@@ -1351,7 +1351,7 @@
 
             .len_home2 .box.b3 .more {
                 border-color: #ddd;
-                background-image: url(../image/xf/png7.png);
+                background-image: url(../../image/png7.png);
             }
 
             .len_home2 .box.b3 .list li, .len_home2 .box.b3 .news {
@@ -1398,7 +1398,7 @@
         height: 25px;
         border: 1px solid;
         border-radius: 4px;
-        background: url(../image/xf/png6.png) center no-repeat;
+        background: url(../../image/png6.png) center no-repeat;
     }
 
         .len_home2 .more:hover {
@@ -1515,7 +1515,7 @@
             right: 0;
             top: 100%;
             height: 8px;
-            background: url(../image/xf/png8.png) center no-repeat;
+            background: url(../../image/png8.png) center no-repeat;
             display: none;
         }
 
@@ -1672,7 +1672,7 @@
                 top: 9px;
                 bottom: 0;
                 margin-left: -14px;
-                background: url(../image/xf/png9.png) no-repeat;
+                background: url(../../image/png9.png) no-repeat;
             }
 
             .len_home3 .carousel li:after {
@@ -1720,12 +1720,12 @@
 
     .len_home3 .prev {
         float: left;
-        background-image: url(../image/xf/prev1.png);
+        background-image: url(../../image/prev1.png);
     }
 
     .len_home3 .next {
         float: right;
-        background-image: url(../image/xf/next1.png);
+        background-image: url(../../image/next1.png);
     }
 
         .len_home3 .prev:hover, .len_home3 .next:hover {
@@ -1893,7 +1893,7 @@
                     top: 0;
                     bottom: 0;
                     right: 0;
-                    background: url(../image/xf/png10.png) center no-repeat;
+                    background: url(../../image/png10.png) center no-repeat;
                 }
 
             .len_home5 .box.b2 .cont {
@@ -1943,12 +1943,12 @@
 
         .len_home5 .box.b3 {
             right: 340px;
-            background: url(../image/xf/img13.jpg) right bottom no-repeat #56a5aa;
+            background: url(../../image/img13.jpg) right bottom no-repeat #56a5aa;
         }
 
         .len_home5 .box.b4 {
             right: 0;
-            background: url(../image/xf/img14.jpg) right bottom no-repeat #00763a;
+            background: url(../../image/img14.jpg) right bottom no-repeat #00763a;
         }
 
     .len_home5 .tagscloud {
