--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/OutVisFor.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_PMain/OutVisFor.cshtml
@@ -8,8 +8,8 @@
     <div class="position">
         <div class="block">
             您现在的位置：
-            <a href="/patient.html">首页</a>
-            &gt; <a href="javascript:void(0);">就医指南</a>		 &gt; <a href="/visitinfo.html">门诊出诊表</a>
+            <a href="/AT_PMain/PanMain">首页</a>
+            &gt; <a href="/AT_PMain/OutVisFor">就医指南</a>		 &gt; <a href="/AT_PMain/OutVisFor">门诊出诊表</a>
         </div>
     </div>
     <div class="part1">
