--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Content/LayoutPage/global.css
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Content/LayoutPage/global.css
@@ -674,6 +674,7 @@ a:hover {
 }
 
 .header .secondNav {
+    border-radius: 15px;
     position: absolute;
     width: 162px;
     left: 50%;
@@ -692,17 +693,16 @@ a:hover {
 
 .top .wrap .enNav {
     position: absolute;
+    border-radius: 15px;
     width: 110px;
-    left: 85.9%;
+    left: 90%;
     margin-left: -81px;
     background: #fff;
     top: 30px;
     padding: 25px 0 10px;
-    -webkit-box-shadow: 0px -2px 10px rgba(0,0,0,0.1);
     box-shadow: 0px -2px 10px rgba(0,0,0,0.1);
     opacity: 1;
     display: none;
-    -webkit-transition: all 0.1s;
     transition: all 0.1s;
     behavior: url(css/PIE.htc);
     text-align: center;
@@ -1361,3 +1361,30 @@ a:hover {
         float: none;
     }
 }
+
+.el-backtop {
+    position: fixed;
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: #010101;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    font-size: 32px;
+    -webkit-box-shadow: 0 0 6px rgba(0,0,0,.12);
+    box-shadow: 0 0 6px rgba(0,0,0,.12);
+    cursor: pointer;
+    z-index: 5
+}
+
+    .el-backtop:hover {
+        background-color: #f2f6fc
+    }
