--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_Login/Default.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/AT_Login/Default.cshtml
@@ -31,7 +31,7 @@
                         background-image: url('../../image/bg.jpg');
                     }
                 </style>
-                <a href="/"><img title="logo"  src="~/image/logo3.png" style="width:25em;margin-left:-100px;margin-top:-30px"></a>
+                <a href="/"><img title="logo" src="/image/logo3.png" style="width: 10em;margin-left:-100px;margin-top: 30px;"></a>
             </div>  
             <!----><ul class="tools">
                 <style>
