--- a/毕业项目源码和数据库/源码/AnTen/AnTen/Views/Shared/_LayoutPage_Pan.cshtml
+++ b/毕业项目源码和数据库/源码/AnTen/AnTen/Views/Shared/_LayoutPage_Pan.cshtml
@@ -142,7 +142,7 @@
                 <div class="enNav" id="enNav">
                     <a href="/AT_PMain/SeaDoc">我的预约</a><a href="/AT_PMain/SeaDocL">个人资料</a><a href="/AT_PMain/SeaDocH">购物记录</a><a href="/AT_PMain/SeaDocH">我的提问</a><a href="/AT_PMain/SeaDocH">退出登录</a>
                 </div>
-                <a href="#">医院版</a>            <a href="#">游客版</a>            <a href="#" class="on">患者版</a>
+                <a href="/HosManage/HosMain">医院版</a>            <a href="#">游客版</a>            <a href="#" class="on">患者版</a>
             </div>
 
         </div>
